--- a/index.html
+++ b/index.html
@@ -3,41 +3,21 @@
   <head>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/cc-icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rocketpay</title>
-
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet" />
   </head>
   <body>
     <div id="app">
       <header>
         <img src="logo.svg" alt="ícone rocketpay" />
       </header>
-
       <section class="cc">
         <div class="cc-bg">
-          <svg
-            width="360"
-            height="230"
-            viewBox="0 0 360 230"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <mask
-              id="mask0_3_2547"
-              style="mask-type: alpha"
-              maskUnits="userSpaceOnUse"
-              x="0"
-              y="0"
-              width="360"
-              height="230"
-            >
+          <svg width="360" height="230" viewBox="0 0 360 230" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <mask id="mask0_3_2547" style="mask-type: alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="360" height="230">
               <rect width="360" height="230" rx="15.4011" fill="#16084C" />
             </mask>
             <g mask="url(#mask0_3_2547)">
@@ -55,69 +35,29 @@
               </g>
             </g>
             <defs>
-              <filter
-                id="filter0_f_3_2547"
-                x="43.2629"
-                y="-225.286"
-                width="468.777"
-                height="351.306"
-                filterUnits="userSpaceOnUse"
-                color-interpolation-filters="sRGB"
-              >
+              <filter id="filter0_f_3_2547" x="43.2629" y="-225.286" width="468.777" height="351.306" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
                 <feFlood flood-opacity="0" result="BackgroundImageFix" />
-                <feBlend
-                  mode="normal"
-                  in="SourceGraphic"
-                  in2="BackgroundImageFix"
-                  result="shape"
-                />
-                <feGaussianBlur
-                  stdDeviation="27.9144"
-                  result="effect1_foregroundBlur_3_2547"
-                />
+                <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape" />
+                <feGaussianBlur stdDeviation="27.9144" result="effect1_foregroundBlur_3_2547" />
               </filter>
-              <filter
-                id="filter1_f_3_2547"
-                x="-9.12087"
-                y="-259.536"
-                width="468.777"
-                height="351.306"
-                filterUnits="userSpaceOnUse"
-                color-interpolation-filters="sRGB"
-              >
+              <filter id="filter1_f_3_2547" x="-9.12087" y="-259.536" width="468.777" height="351.306" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
                 <feFlood flood-opacity="0" result="BackgroundImageFix" />
-                <feBlend
-                  mode="normal"
-                  in="SourceGraphic"
-                  in2="BackgroundImageFix"
-                  result="shape"
-                />
-                <feGaussianBlur
-                  stdDeviation="27.9144"
-                  result="effect1_foregroundBlur_3_2547"
-                />
+                <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape" />
+                <feGaussianBlur stdDeviation="27.9144" result="effect1_foregroundBlur_3_2547" />
               </filter>
             </defs>
           </svg>
         </div>
-
         <div class="cc-logo">
           <span><img src="/cc-icon.svg" alt="ícone padrão de cartão" /></span>
-          <span
-            ><img
-              src="/cc-default.svg"
-              alt="ícone do cartão de crédito selecionado"
-          /></span>
+          <span><img src="/cc-default.svg" alt="ícone do cartão de crédito selecionado" /></span>
         </div>
-
         <div class="cc-info">
           <div class="cc-number">1234 5678 9012 3456</div>
-
           <div class="cc-holder">
             <div class="label">Nome do titular</div>
             <div class="value">FULANO DA SILVA</div>
           </div>
-
           <div class="cc-extra">
             <div class="cc-expiration">
               <div class="label">Expiração</div>
@@ -131,34 +71,28 @@
           </div>
         </div>
       </section>
-
       <form action="">
         <div class="input-wrapper">
           <label for="card-number">Número do cartão</label>
           <input id="card-number" />
         </div>
-
         <div class="input-wrapper">
           <label for="card-holder">Nome do titular</label>
           <input id="card-holder" />
         </div>
-
         <div class="flex">
           <div class="input-wrapper">
             <label for="expiration-date">Expiração</label>
             <input id="expiration-date" />
           </div>
-
           <div class="input-wrapper">
             <label for="security-code">CVC</label>
             <input id="security-code" />
           </div>
         </div>
-
         <button id="add-card">ADICIONAR CARTÃO</button>
       </form>
     </div>
-
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
