--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
   </head>
   <body>
     <div id="app">
-      <header>
-        <img src="logo.svg" alt="ícone rocketpay" />
-      </header>
+      <header><img src="logo.svg" alt="ícone rocketpay" /></header>
       <section class="cc">
         <div class="cc-bg">
           <svg width="360" height="230" viewBox="0 0 360 230" fill="none" xmlns="http://www.w3.org/2000/svg">
