--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/cc-icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rocketpay</title>
+    <title>
+      Rocketpay
+    </title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet" />
   </head>
   <body>
     <div id="app">
-      <header><img src="logo.svg" alt="ícone rocketpay" /></header>
+      <header>
+        <img src="logo.svg" alt="ícone rocketpay" />
+      </header>
       <section class="cc">
         <div class="cc-bg">
           <svg width="360" height="230" viewBox="0 0 360 230" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -47,23 +51,41 @@
           </svg>
         </div>
         <div class="cc-logo">
-          <span><img src="/cc-icon.svg" alt="ícone padrão de cartão" /></span>
-          <span><img src="/cc-default.svg" alt="ícone do cartão de crédito selecionado" /></span>
+          <span>
+            <img src="/cc-icon.svg" alt="ícone padrão de cartão" />
+          </span>
+          <span>
+            <img src="/cc-default.svg" alt="ícone do cartão de crédito selecionado" />
+          </span>
         </div>
         <div class="cc-info">
-          <div class="cc-number">1234 5678 9012 3456</div>
+          <div class="cc-number">
+            1234 5678 9012 3456
+          </div>
           <div class="cc-holder">
-            <div class="label">Nome do titular</div>
-            <div class="value">FULANO DA SILVA</div>
+            <div class="label">
+              Nome do titular
+            </div>
+            <div class="value">
+              FULANO DA SILVA
+            </div>
           </div>
           <div class="cc-extra">
             <div class="cc-expiration">
-              <div class="label">Expiração</div>
-              <div class="value">02/32</div>
+              <div class="label">
+                Expiração
+              </div>
+              <div class="value">
+                02/32
+              </div>
             </div>
             <div class="cc-security">
-              <div class="label">CVC</div>
-              <div class="value">123</div>
+              <div class="label">
+                CVC
+              </div>
+              <div class="value">
+                123
+              </div>
             </div>
             <img src="/cc-chip.svg" alt="ícone de chip de cartão de crédito" />
           </div>
@@ -71,26 +93,37 @@
       </section>
       <form action="">
         <div class="input-wrapper">
-          <label for="card-number">Número do cartão</label>
+          <label for="card-number">
+            Número do cartão
+          </label>
           <input id="card-number" />
         </div>
         <div class="input-wrapper">
-          <label for="card-holder">Nome do titular</label>
+          <label for="card-holder">
+            Nome do titular
+          </label>
           <input id="card-holder" />
         </div>
         <div class="flex">
           <div class="input-wrapper">
-            <label for="expiration-date">Expiração</label>
+            <label for="expiration-date">
+              Expiração
+            </label>
             <input id="expiration-date" />
           </div>
           <div class="input-wrapper">
-            <label for="security-code">CVC</label>
+            <label for="security-code">
+              CVC
+            </label>
             <input id="security-code" />
           </div>
         </div>
-        <button id="add-card">ADICIONAR CARTÃO</button>
+        <button id="add-card">
+          ADICIONAR CARTÃO
+        </button>
       </form>
     </div>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/src/main.js">
+    </script>
   </body>
 </html>
