--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/cc-icon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <meta charset="UTF-8">
+    <link rel="icon" type="image/svg+xml" href="/cc-icon.svg">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
       Rocketpay
     </title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="app">
       <header>
-        <img src="logo.svg" alt="ícone rocketpay" />
+        <img src="logo.svg" alt="ícone rocketpay">
       </header>
       <section class="cc">
         <div class="cc-bg">
@@ -52,10 +52,10 @@
         </div>
         <div class="cc-logo">
           <span>
-            <img src="/cc-icon.svg" alt="ícone padrão de cartão" />
+            <img src="/cc-icon.svg" alt="ícone padrão de cartão">
           </span>
           <span>
-            <img src="/cc-default.svg" alt="ícone do cartão de crédito selecionado" />
+            <img src="/cc-default.svg" alt="ícone do cartão de crédito selecionado">
           </span>
         </div>
         <div class="cc-info">
@@ -87,7 +87,7 @@
                 123
               </div>
             </div>
-            <img src="/cc-chip.svg" alt="ícone de chip de cartão de crédito" />
+            <img src="/cc-chip.svg" alt="ícone de chip de cartão de crédito">
           </div>
         </div>
       </section>
@@ -96,26 +96,26 @@
           <label for="card-number">
             Número do cartão
           </label>
-          <input id="card-number" />
+          <input id="card-number">
         </div>
         <div class="input-wrapper">
           <label for="card-holder">
             Nome do titular
           </label>
-          <input id="card-holder" />
+          <input id="card-holder">
         </div>
         <div class="flex">
           <div class="input-wrapper">
             <label for="expiration-date">
               Expiração
             </label>
-            <input id="expiration-date" />
+            <input id="expiration-date">
           </div>
           <div class="input-wrapper">
             <label for="security-code">
               CVC
             </label>
-            <input id="security-code" />
+            <input id="security-code">
           </div>
         </div>
         <button id="add-card">
